# claude-plugins

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
episodic/: pyproject.toml
episodic/.claude-plugin/: plugin.json
episodic/hooks/: hooks.json  session-end.sh
episodic/lib/: cocoindex_trigger.py  cocoindex_trigger.sh  codex_runner.py  config.py  frontmatter.py  lockfile.py  log_rotate.py  log_rotate.sh  notify.py  osinfo.py  path_resolver.py  plugin_root.py  resolve_collision.py  snapshot.py  staging_scanner.py  wiki_dispatch.py  wiki_index.py  wiki_prompt.py  wiki_queue.py  wiki_reconcile.py
episodic/recording/: main_episodic.py
episodic/scripts/: .gitignore  install-bin.sh  mount-memory-share.sh  pyproject.toml  session-end.sh  session-start.sh  session-stop.sh  session-user-prompt-submit.sh  setup_db.sh  sync-pending.sh  uninstall.sh
episodic/session/: hook.py  jsonl-to-markdown.py  retry-pending.sh  retry_pending.py  runner.py  runner.sh  session-extract.py
episodic/templates/: cocoindex.toml.example  config.example.toml  diary.md  minutes.md  secrets.env.example  session.md  web.md
episodic/tests/: README.md  conftest.py  test_cocoindex_trigger.py  test_codex_runner.py  test_config.py  test_enqueue.py  test_frontmatter.py  test_hook.py  test_hook_claude.py  test_hook_codex.py  test_jsonl_to_markdown.py  test_kick_runner.py  test_lockfile.py  test_log_rotate.py  test_mount_memory_share.py  test_notify.py  test_org_pipeline.py  test_org_web_verify.py  test_path_resolver.py  test_resolve_collision.py  test_retry_pending.py  test_retry_queue.py  (+15 more)
(+323 files in other folders)
