[project]
name = "episodic-plugin"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "asyncpg>=0.30",
    "cocoindex[postgres,litellm]>=1.0.1",
    "litellm>=1.50",
    "numpy>=1.26",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv",
    "voyageai>=0.3.7",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
